# stories-typer

./: README.md  com.rafaelmardojai.StoriesTyper.json  meson.build
data/: com.rafaelmardojai.StoriesTyper.appdata.xml.in  com.rafaelmardojai.StoriesTyper.desktop.in  com.rafaelmardojai.StoriesTyper.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: about.py  actions.py  editor.py  headerbar.py  main.py  meson.build  objects.py  sourceview.py  storiestyper.in  window.py
src/resources/: meson.build  resources.gresource.xml
src/resources/css/: style.css
src/resources/gtksourceview/: fountain.lang  storiestyper-light.xml
src/resources/ui/: about.ui  editor.ui  headerbar.ui  window.ui
